--- a/index.html
+++ b/index.html
@@ -562,10 +562,9 @@
 											</div>
 											<!-- Edit content based on your Certifications -->
 											<div class="timeline-label">
-												<h2><a href="#">Tableau, Power BI, SQL, MongoDB</a> <span> </span></h2>
-												<p id="project-tool">~ from Coursera [IIT Madras]</p>
-												<p>Certifed by learnbay online learning platform for using data
-													visualization tools and handling data with SQL and NoSQL skills.</p>
+												<h2><a href="#">Introduction to Java</a> <span> </span></h2>
+												<p id="project-tool">Infosys Springboard</p>
+												<p>Certifed by Infosys Springboard!</p>
 											</div>
 										</div>
 									</article>
